--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "github:protection-status": "node scripts/setup-branch-protection.js status",
     "ci:quality": "npm run lint && npm run type-check && npm run format:check",
     "ci:test": "npm test",
-    "ci:build": "NODE_ENV=production npm run build",
+    "ci:build": "npm run build",
     "ci:security": "npm run audit:security",
     "ci:full": "npm run ci:quality && npm run ci:security && npm run ci:test && npm run ci:build",
     "task:complete": "node scripts/automated-task-completion.js",
